[package]
name = "Database"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
tiberius = { version = "0.12", features = ["sql-browser-tokio"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
odbc-api = "4.0"
once_cell = "1.18"
bb8 = "0.8"
async-trait = "0.1"
dashmap = "5"
webbrowser = "0.8"
